--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/styles.css">
-   <title>Про меня</title>
+   <title>Про меня немного</title>
 </head>
 <body>
 <div class="page">
     <div class="header">
             <div class="inner-header">
                 <div class="logo-container">
-                    <h1>Немного обо мне...</h1>
+                    <h1>Про меня немного...</h1>
                 </div>
                 <nav>
                     <ul class="navigation">
