--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="contents">
         <h2 align="center"> Мое хобби - отсутствие хобби!</h2>
         <hr>
-        <img class="left" src="images/book.jpeg" alt="Мое фото" width="300" style="border: 5px solid #a0a4a8;">
+        <img class="left" src="images/book.jpeg" alt="Книжка" width="300" style="border: 5px solid #a0a4a8;">
         <p>Очень лень писать про свое хобби потому что его нет, к сожалению(((</p>
         <p>Далее будет просто текст взятый на просторах интернета.</p>
         <p>Из всего разнообразия увлечений, мое хобби – это книги. Когда я начинаю читать, я отдаю всю себя и могу просидеть за чтением какой-нибудь интересной книги чуть ли не весь день, забыв о сне и еде. Когда я читаю, я успокаиваюсь.</p>
